# VLegalLM-Tiny-A-Vietnamese-Legal-Language-Model

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
configs/: config.yaml
scripts/: run.sh  run_pipeline_legal_vn.sh  run_pretrain.sh
src/vlex_ria/: __init__.py
src/vlex_ria/cache/tokenizer/models--vinai--phobert-base/snapshots/c1e37c5c86f918761049cef6fa216b4779d0d01d/: bpe.codes  config.json  tokenizer.json  vocab.txt
src/vlex_ria/core/: config.py
src/vlex_ria/core/utils/: __init__.py  logger.py
src/vlex_ria/data/: __init__.py  cleaners.py  dataloaders.py  dataset.py  rl_dataset.py
src/vlex_ria/data/adapters/: __init__.py  legal_adapter.py
src/vlex_ria/data/ingestion/: __init__.py  downloader.py
src/vlex_ria/inference/: __init__.py  inference.py
src/vlex_ria/model/: __init__.py  attention.py  deepseekv3.py  moe.py  mtp.py
src/vlex_ria/serving/web/: IMPLEMENTATION.md  app.py
src/vlex_ria/serving/web/static/: app.js  style.css
src/vlex_ria/serving/web/templates/: index.html
src/vlex_ria/training/: __init__.py  engine.py  rl_trainer_algorithms.py  rl_trainer_base.py  trainer.py  training_utils.py
tests/: test_all.py  test_rl.py
tools/: train_legal_tokenizer.py
